Composite: implement PartyComposite team structure