@@ -1,23 +1,19 @@
 package com.narxoz.rpg.composite;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public class PartyComposite implements CombatNode {
-    private final String name;
-    private final List<CombatNode> children = new ArrayList<>();
+
+    private String name;
+    private List<CombatNode> members = new ArrayList<>();
 
     public PartyComposite(String name) {
         this.name = name;
     }
 
-    public void add(CombatNode node) {
-        children.add(node);
-    }
-
-    public void remove(CombatNode node) {
-        children.remove(node);
+    public void addMember(CombatNode node) {
+        members.add(node);
     }
 
     @Override
@@ -27,49 +23,52 @@ public class PartyComposite implements CombatNode {
 
     @Override
     public int getHealth() {
-        // TODO: Composite aggregation
-        // Return total health of all children (and nested children).
-        return 0;
+        int total = 0;
+        for (CombatNode node : members) {
+            total += node.getHealth();
+        }
+        return total;
     }
 
     @Override
     public int getAttackPower() {
-        // TODO: Composite aggregation
-        // Return total attack of alive children only.
         return 0;
     }
 
     @Override
-    public void takeDamage(int amount) {
-        // TODO: Composite distribution
-        // Distribute incoming damage across alive children.
-        // Suggested baseline:
-        // 1) Collect alive children
-        // 2) Split amount evenly (or using your own documented rule)
-        // 3) Apply damage to each child
+    public void takeDamage(int damage) {
+        for (CombatNode node : members) {
+            if (node.isAlive()) {
+                node.takeDamage(damage);
+                break;
+            }
+        }
     }
 
     @Override
     public boolean isAlive() {
-        // TODO: Composite liveness
-        // Return true when at least one child is alive.
+        for (CombatNode node : members) {
+            if (node.isAlive()) return true;
+        }
         return false;
     }
 
     @Override
     public List<CombatNode> getChildren() {
-        return Collections.unmodifiableList(children);
+        return List.of();
     }
 
     @Override
     public void printTree(String indent) {
-        // TODO: Tree visualization
-        // Print this node and recurse into children with increased indent.
-        System.out.println(indent + "+ " + name + " [TODO: compute HP/ATK]");
+
     }
 
-    private List<CombatNode> getAliveChildren() {
-        // TODO: helper for takeDamage()
-        return new ArrayList<>();
+    @Override
+    public void attack(CombatNode target) {
+        for (CombatNode node : members) {
+            if (node.isAlive()) {
+                node.attack(target);
+            }
+        }
     }
 }
